--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-hest hest hest 
+<!DOCTYPE html>
+<html lang="da">
+    <head>
+    <!-- Linker til eksternt CSS-stylesheet (grundlæggende styling)-->
+    <link rel="stylesheet" href="stylesheet.css">
+    <meta charset="UTF-8">
+    <!-- Sørger for websiden skalerer korrekt på mobile enheder -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Medie Signe</title>
+</head>
+<!-- Websidens start -->
+<body>
+    <!-- Header med navigationslinks -->
+    <header>
+        <nav>
+            <div class="nav-container">
+                <ul>
+                    <!-- Hver 'li' indeholder link til en anden side/page -->
+                    <li><a href="index.html">FORSIDE</a></li>
+                    <li><a href="om-mig.html">OM MIG</a></li>
+                    <li><a href="portfolio.html">PORTFOLIO</a></li>
+                    <li><a href="kontakt.html">KONTAKT</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Indholdet/hovedindholdet på siden, det vigtige -->
+    <main>
+       
+        <section class="intro">
+            <h1>Signe Grønning</h1>
+            <p class="first">Multimediedesigner</p>
+            <h2>Jeg har erfaring i:</h2>
+            <p>Grafisk design, webdesign, designværktøjer, trends & tendenser og meget mere.</p>
+            <button class="read-mere-knap">Læs mere</button>
+        </section>
+
+        <div class="pink-box">
+            <img src="migforside.png" alt="Billede af Signe" class="billede">
+        </div>
+
+    </main>
+
+<!-- Footer indeholder kontaktinformation og links til sociale medier -->
+    <footer>
+        <address>Fengersvej 37, Odense M</address>
+        <!-- 'href="tel:"' gøres det muligt for brugeren at ringe direkte ved at trykke på nr. -->
+        <a href="tel:+4531335654">+45 31 33 56 54</a>
+        <a href="mailto:signe.gronning@gmail.com">signe.gronning@gmail.com</a>
+        <div class="socialemedier">
+            <!-- 'div' grupperer elementerne sammen -->
+            <a href="https://www.instagram.com/signe.groenning/"><img src="Instagram.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="Linkedin.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com/signe.gronning"><img src="Facebook-Logo.png" alt="Facebook"></a>
+        </div>
+    </footer>
+</body>
+</html>
+
