--- a/om-mig.html
+++ b/om-mig.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="stylesheet-om-mig.css">
+    <!-- Grundlæggende sideinformation -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OM MIG</title>
+    <!-- Sørger for websiden skalerer korrekt på mobile enheder -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Medie Signe</title>
+    <!-- Link til ekstern CSS-fil for at style siden -->
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
-<!-- Websidens start -->
 <body>
     <!-- Header med navigationslinks -->
     <header>
+        <!-- Navigationsmenu med links til andre sider på websitet -->
         <nav>
-            <div class="nav-container">
+            <div class="nav-container-forside">
                 <ul>
-                    <!-- Hver 'li' indeholder link til en anden side/page -->
                     <li><a href="index.html">FORSIDE</a></li>
                     <li><a href="om-mig.html">OM MIG</a></li>
                     <li><a href="portfolio.html">PORTFOLIO</a></li>
@@ -24,47 +25,53 @@
         </nav>
     </header>
 
-    <main>
+    <!-- Hovedindholdet på siden -->
+    <main class="main-om-mig">
         <div class="indhold"> 
-        <section class="intro">
-            <div class="tekst-overst">
-            <h1 class="overskrift">OM MIG</h1>
-            <p class="brødtekst">Velkommen til min personlige side. Mit navn er Signe Grønning, jeg er en smilende pige på 22 år og bosiddende i Odense M.</p>
-            <p>Min helt store interesse er digital design og online medieplatforme. Derfor læser jeg til multimediedesign på UCL, Odense.</p>
-            <p>På min uddannelse har jeg en stor interesse i at skabe detaljeorienterede og æstetisk tiltalende løsninger både selvstændigt og i kreative teams.</p>
+            <section class="intro-om-mig">
+             <div class="tekst-overst-om-mig">
+                <h1 class="overskrift-om-mig">OM MIG</h1>
+                <p class="brødtekst-om-mig">Velkommen til min personlige side. Mit navn er Signe Grønning, jeg er en smilende pige på 22 år og bosiddende i Odense M.</p>
+                <p>Min helt store interesse er digital design og online medieplatforme. Derfor læser jeg til multimediedesign på UCL, Odense.</p>
+                <p>På min uddannelse har jeg en stor interesse i at skabe detaljeorienterede og æstetisk tiltalende løsninger både selvstændigt og i kreative teams.</p>
             </div>
+            <!-- Billede af mig -->
             <img src="migomside.jpg" alt="Signe Grønning" class="profile-pic">
         </section>
 
+        <!-- Sektion der fremhæver mine kompetencer -->
         <section class="kompetencer">
             <h2>Mine kompetencer</h2>
             <div class="skills">
+
+                <!-- Enkelt kompetenceområde med billede og beskrivelse -->
                 <div class="skill">
                     <img src="Ide.jpg" alt="Kreativ idégenerering">
                     <h3>Kreativitet</h3>
                     <p>Kreativ idégenerering<br>Hands-on læring.</p>
                 </div>
+
+                <!-- Enkelt kompetenceområde med billede og beskrivelse -->
                 <div class="skill">
                     <img src="figma-logo.jpg" alt="Figma">
                     <h3>Figma</h3>
                     <p>Figma<br>Erfaring i Figma. Bruger det til at visualisere projekter.</p>
                 </div>
-
-                
             </div>
         </section>
-        </div>
-    </main>
-
+    </div>
+    </main-om-mig>
 
     <!-- Footer indeholder kontaktinformation og links til sociale medier -->
     <footer>
+        <!-- Kontakinformation -->
         <address>Fengersvej 37, Odense M</address>
         <!-- 'href="tel:"' gøres det muligt for brugeren at ringe direkte ved at trykke på nr. -->
         <a href="tel:+4531335654">+45 31 33 56 54</a>
         <a href="mailto:signe.gronning@gmail.com">signe.gronning@gmail.com</a>
+        
+        <!-- Links til sociale medie-profiler med ikoner -->
         <div class="socialemedier">
-            <!-- 'div' grupperer elementerne sammen -->
             <a href="https://www.instagram.com/signe.groenning/"><img src="Instagram.png" alt="Instagram"></a>
             <a href="https://www.linkedin.com/in/signe-grønning/"><img src="Linkedin.png" alt="LinkedIn"></a>
             <a href="https://www.facebook.com/signe.gronning"><img src="Facebook-Logo.png" alt="Facebook"></a>
