--- a/om-mig.html
+++ b/om-mig.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!-- Sørger for websiden skalerer korrekt på mobile enheder -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Medie Signe</title>
+    <title>OM MIG</title>
     <!-- Link til ekstern CSS-fil for at style siden -->
     <link rel="stylesheet" href="stylesheet.css">
 </head>
@@ -26,7 +26,7 @@
     </header>
 
     <!-- Hovedindholdet på siden -->
-    <main class="main-om-mig">
+    <main>
         <div class="indhold"> 
             <section class="intro-om-mig">
              <div class="tekst-overst-om-mig">
@@ -60,7 +60,7 @@
             </div>
         </section>
     </div>
-    </main-om-mig>
+    </main>
 
     <!-- Footer indeholder kontaktinformation og links til sociale medier -->
     <footer>
