--- a/index.html
+++ b/index.html
@@ -12,48 +12,57 @@
     <!-- Header med navigationslinks -->
     <header>
         <!-- Navigationsmenu med links til andre sider på websitet -->
-        <nav>
-            <div class="nav-container-forside">
+        <nav class="nav-container-forside">
+                <img src="logo-1.png" alt="LOGO" class="logo">
                 <ul>
                     <li><a href="index.html">FORSIDE</a></li>
                     <li><a href="om-mig.html">OM MIG</a></li>
                     <li><a href="portfolio.html">PORTFOLIO</a></li>
                     <li><a href="kontakt.html">KONTAKT</a></li>
                 </ul>
-            </div>
         </nav>
     </header>
 
-    <!-- Hovedindholdet på siden, det vigtige -->
-    <main>
-        <!-- Introduktion på forsiden -->
-        <section class="intro-forside">
+    <!-- Hovedindholdet på siden -->
+    <section class="main-content">
+     <!-- Introduktion på forsiden -->
+    <div class="intro-forside">
             <h1 class="navn-forside">Signe Grønning</h1>
             <p class="first-forside">Multimediedesigner</p>
             <h2>Jeg har erfaring i:</h2>
             <p>Grafisk design, webdesign, designværktøjer, trends & tendenser og meget mere.</p>
             <button class="read-mere-knap">Læs mere</button>
-        </section>
+    </div>
 
-        <!-- Billede der supplerer introduktionen -->
-        <div class="pink-box-forside">
-            <img src="migforside.png" alt="Billede af Signe" class="billede">
-        </div>
-    </main>
+    <!-- Billede der supplerer introduktionen -->
+    <div class="pink-box-forside">
+        <img src="migforside.png" alt="Billede af Signe" class="billede">
+    </div>
+</section>
 
     <!-- Footer indeholder kontaktinformation og links til sociale medier -->
     <footer>
         <!-- Kontakinformation -->
+        <div class="footer-info">
+        <img src="lokation.png" alt="lokation" class="lokation-ikon">
         <address>Fengersvej 37, Odense M</address>
-        <!-- 'href="tel:"' gøres det muligt for brugeren at ringe direkte ved at trykke på nr. -->
+        <!-- 'href="tel:"' Telefonnummer med direkte opkaldsfunktion -->
+        </div>
+        <div class="footer-info">
+        <img src="telefon-ikon.png" alt="telefon" class="telefon-ikon">
         <a href="tel:+4531335654">+45 31 33 56 54</a>
+        </div>
+        <div class="footer-info">
+        <!-- 'href="tel:"' E-mail med direkte mailfunktion -->
+        <img src="mail-ikon.png" alt="e-mailadresse" class="mail-ikon">
         <a href="mailto:signe.gronning@gmail.com">signe.gronning@gmail.com</a>
+        </div>
         
         <!-- Links til sociale medie-profiler med ikoner -->
         <div class="socialemedier">
-            <a href="https://www.instagram.com/signe.groenning/"><img src="Instagram.png" alt="Instagram"></a>
-            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="Linkedin.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook.com/signe.gronning"><img src="Facebook-Logo.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/signe.groenning/"><img src="Insta-ikon.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="in-ikon.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com/signe.gronning"><img src="FB-ikon.png" alt="Facebook"></a>
         </div>
     </footer>
 </body>
