--- a/kontakt.html
+++ b/kontakt.html
@@ -1,11 +1,94 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
+    <!-- Grundlæggende sideinformation og link til eksterne ressourcer-->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Sørger for websiden skalerer korrekt på mobile enheder -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>PORTFOLIO</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    
+
+    <!-- Header med navigationslinks -->
+    <header>
+
+        <!-- Navigationsmenu med links til andre sider på websitet -->
+        <nav class="nav-container-forside">
+                <img src="logo-1.png" alt="LOGO" class="logo">
+                <ul>
+                    <li><a href="index.html">FORSIDE</a></li>
+                    <li><a href="om-mig.html">OM MIG</a></li>
+                    <li><a href="portfolio.html">PORTFOLIO</a></li>
+                    <li><a href="kontakt.html">KONTAKT</a></li>
+                </ul>
+        </nav>
+    </header>
+
+</head>
+<!-- Kontaktinformation og formular sektion -->
+<section class="contact-info">
+    <h1>KONTAKT</h1>
+    <div class="info-container">
+    <div class="info-text-contact">
+        <h2>Har jeg fanget din interesse?</h2>
+        <p>Du er velkommen til at udfylde kontaktformularen, sende en e-mail, eller kontakte mig direkte for en uforpligtende samtale. Jeg ser frem til at høre fra dig og muligheden for at arbejde sammen for at bidrage til at realisere dine kreative visioner.</p>
+        <div class="contact-details">
+            <div class="contact-item">
+                <img src="telefon-ikon.png" alt="Telefon" class="telefon-ikon">
+                <p>+45 31 33 65 64</p>
+            </div>
+            <div class="contact-item">
+                <img src="mail-ikon.png" alt="e-mailadresse" class="mail-ikon">
+                <p>signe.gronning@gmail.com</p>
+            </div>
+        </div>
+    </div>
+    <div class="contact-image">
+        <img src="migkontakt.png" alt="Signe Grønning">
+    </div>
+</div>
+</section>
+
+
+ <!-- Kontaktformular -->
+ <section class="contact-form">
+    <h2>Kontakt mig!</h2>
+    <p>Jeg glæder mig til at høre fra dig og i fællesskab skabe enestående løsninger.</p>
+    <form action="submit.php" method="post">
+        <input type="text" placeholder="Dit navn" required>
+        <input type="email" placeholder="Din mail" required>
+        <textarea placeholder="Din besked" required></textarea>
+        <button type="submit">Send</button>
+    </form>
+</section>
+
+
+    <!-- Footer indeholder kontaktinformation og links til sociale medier -->
+    <footer>
+        <!-- Kontakinformation -->
+        <div class="footer-info">
+        <img src="lokation.png" alt="lokation" class="lokation-ikon">
+        <address>Fengersvej 37, Odense M</address>
+        <!-- 'href="tel:"' Telefonnummer med direkte opkaldsfunktion -->
+        </div>
+        <div class="footer-info">
+        <img src="telefon-ikon.png" alt="telefon" class="telefon-ikon">
+        <a href="tel:+4531335654">+45 31 33 56 54</a>
+        </div>
+        <div class="footer-info">
+        <!-- 'href="tel:"' E-mail med direkte mailfunktion -->
+        <img src="mail-ikon.png" alt="e-mailadresse" class="mail-ikon">
+        <a href="mailto:signe.gronning@gmail.com">signe.gronning@gmail.com</a>
+        </div>
+        
+        <!-- Links til sociale medie-profiler med ikoner -->
+        <div class="socialemedier">
+            <a href="https://www.instagram.com/signe.groenning/"><img src="Insta-ikon.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="in-ikon.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com/signe.gronning"><img src="FB-ikon.png" alt="Facebook"></a>
+        </div>
+    </footer>
 </body>
 </html>
+
